# quizhero-api-lambda-get-quizzes

./: .env.tmpl  .gitignore  Makefile  README.md  make.sh  publish.sh  pyproject.toml
.github/workflows/: terraform-apply.yml
app/: lambda_function.py
app/src/: test.py
app/src/adapters/: mysql_adapter.py
infra/: iam.tf  lambda.tf  main.tf  variables.tf
